Main UI
- Drag images on the library button to set a custom image
- Long press a library button to remove custom image
- Allow sorting libraries by book count
- Never collapse sorting button
- Use Komga user-settings API to save settings

Reader
- Support different color themes for reader background
- Remove white margins from cover page
- Add highlight to turn page animation
- Increase saturation of reader background

Build
-

Fixes
- Fix spacing of last strip in dashboard