@@ -9,6 +9,7 @@
 	--mb-accent-active: hsl(var(--mb-h), 48%, 84%);
 	--mb-accent-a30: hsla(var(--mb-h), var(--mb-s), var(--mb-l), 0.3);
 	--mb-accent-a50: hsla(var(--mb-h), var(--mb-s), var(--mb-l), 0.5);
+	--mb-accent-dark: hsl(var(--mb-h), var(--mb-s), 40%);
 
 	--mb-library-gap: 8px;
 	--mb-button-size: 44px;
@@ -35,14 +36,24 @@
 
 	--mb-num-buttons: 1;
 
-	--mb-swatches:
+	--mb-swatches-hi:
 		hsl(348, 92%, 38%),
-		hsl(39, 100%, 50%),
-		hsl(51, 100%, 48%),
-		hsl(92, 78%, 46%),
+		hsl(37, 100%, 50%),
+		hsl(50, 100%, 48%),
+		hsl(92, 78%, 42%),
 		hsl(210, 76%, 50%),
 		hsl(231, 65%, 47%),
 		hsl(274, 57%, 41%),
+		hsl(306, 70%, 60%);
+
+	--mb-swatches-lo:
+		hsl(348, 92%, 38%),
+		hsl(37, 100%, 50%),
+		hsl(50, 100%, 48%),
+		hsl(92, 82%, 40%),
+		hsl(210, 76%, 50%),
+		hsl(231, 65%, 47%),
+		hsl(274, 57%, 51%),
 		hsl(306, 70%, 60%);
 }
 
@@ -1138,6 +1149,10 @@ book-item {
 .highlighted {
 	background-color: var(--mb-accent);
 	color: white;
+}
+
+.highlighted .library-name{
+	text-shadow: 0px 0px 8px var(--mb-accent-dark);
 }
 
 .highlighted.with-menu {
