@@ -4,6 +4,8 @@ Main UI
 - Allow sorting libraries by book count
 - Never collapse sorting button
 - Use Komga user-settings API to save settings
+- Tune color accent for light and dark theme
+- Improve contrast of highlighted buttons
 
 Reader
 - Support different color themes for reader background
